--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World HOW ARE YOU
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+</head>
+<body>
+    <header>
+        <h1>Hello Coding Office Tools</h1>
+    </header>
+    <img src="image/far_from_the_noise.jpeg">
+    <img src="image/VntfLQ3t_400x400.jpg">
+</body>
+</html>
