--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h1>This is my random website ! Hello</h1>
     </header>
     <img src="image/far_from_the_noise.jpeg">
-    <img src="image/VntfLQ3t_400x400.jpg">
+    <!-- <img src="image/VntfLQ3t_400x400.jpg"> -->
 </body>
 </html>
