--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>This is my random website ! Hello</h1>
     </header>
     <img src="image/far_from_the_noise.jpeg">
+    <img src="C:/Users/emili/Desktop/Cours Bootcamp/Git/jaddevvv.github.io/image/66b5e6315a9b2be6bc0e4c58_Nathan Serfaty.png">
     <!-- <img src="image/VntfLQ3t_400x400.jpg"> -->
 </body>
 </html>
